--- a/sic/templates/posts/comment.html
+++ b/sic/templates/posts/comment.html
@@ -30,7 +30,7 @@
                             <input type="submit" aria-label="upvote comment" title="upvote comment" value="">
                         </form>
                     {% endif %}
-                </div>
+                </div>&#32;
                 <span class="score">
                     {{comment.karma}}
                 </span>
