--- a/sic/templates/posts/story.html
+++ b/sic/templates/posts/story.html
@@ -19,7 +19,7 @@
                         </form>
                     {% endif %}
                 </div>
-                <div class="score">
+                <div class="score story-title">
                     {{story.karma}}
                 </div>
             </div>
