--- a/sic/templates/posts/story_list_item.html
+++ b/sic/templates/posts/story_list_item.html
@@ -12,7 +12,7 @@
                         <input type="submit" title="Upvote story ''{{ story.title }}'" aria-label="Upvote story ''{{ story.title }}'" formaction="{% url_with_next 'upvote_story' story.pk request %}" formmethod="POST" value="">
                     </form>
                 {% endif %}
-            </div>
+            </div>&#32;
             <div class="score">
                 {{story.karma}}
             </div>
