--- a/sic/templates/posts/story_list_item.html
+++ b/sic/templates/posts/story_list_item.html
@@ -12,9 +12,9 @@
                         <input type="submit" title="Upvote story ''{{ story.title }}'" aria-label="Upvote story ''{{ story.title }}'" formaction="{% url_with_next 'upvote_story' story.pk request %}" formmethod="POST" value="">
                     </form>
                 {% endif %}
-            </div>&#32;
+            </div>
             <div class="score">
-                {{story.karma}}
+                {% comment %}&#32;{{story.karma}}{% endcomment %}
             </div>
         </div>
         <div class="title{% if story.content_warning %} content-warning{% endif %}">
