about/statistics: add user inv tree graph

--- a/sic/templates/about/statistics.html
+++ b/sic/templates/about/statistics.html
@@ -66,5 +66,11 @@
             </svg>
             <figcaption>Connectivity of tag graph</figcaption>
         </figure>
+        <figure>
+            <svg role="img" xmlns="http://www.w3.org/2000/svg" style="height: auto; width: 460.8pt;max-width: var(--main-width);" viewBox="0 0 460.8 345.6">
+                <use xlink:href="{% url 'user_graph_svg' %}#svg" width="100%" height="100%"></use>
+            </svg>
+            <figcaption>User invitation tree</figcaption>
+        </figure>
     </article>
 {% endblock %}
