--- a/sic/templates/about/about.html
+++ b/sic/templates/about/about.html
@@ -52,6 +52,7 @@
     <nav class="menu">
         <ul>
             <li><a href="{% url 'invitation_tree' %}">User invitation tree</a></li>
+            <li><a href="{% url 'about_statistics' %}">Community statistics</a></li>
             <li>IRC Channel: <code>#sic</code> on <a href="https://libera.chat/" rel="external nofollow">Libera Chat</a>, connect with an IRC client at <a href="ircs://irc.libera.chat:6697" rel="external nofollow"><code>ircs://irc.libera.chat:6697</code></a>, use a <a href="https://web.libera.chat/?channel=#sic">webclient</a> or the <a href="https://app.element.io/#/room/#sic:libera.chat" rel="external nofollow">Matrix bridge</a>.</li>
         </nav>
         <h2>links</h2>
