--- a/sic/templates/index.html
+++ b/sic/templates/index.html
@@ -40,7 +40,7 @@
             text-decoration: none;
         }
         @media (prefers-color-scheme: dark) {
-            div.aggregations>div {
+            div.aggregations>div>div {
                 background: #666a6d;
             }
             a.agg-name, a.agg-name:visited {
