--- a/sic/templates/tags/edit_tag.html
+++ b/sic/templates/tags/edit_tag.html
@@ -10,7 +10,7 @@
             .then((module) => {
             async function run() {
                 let w = await module.default("{% static 'tag_input_wasm_bg.wasm' %}");
-                module.setup("parent", "parents", "id_parents", "parents_json");
+                module.setup("parent", "id_parents", "parents_json", false);
             }
             return run();
         }).catch(err => {
@@ -25,6 +25,7 @@
             border: 1px solid ThreeDLightShadow;
             padding: 5px;
             display: inline;
+            cursor: text;
         }
         input.tag-wasm-input {
             border: none;
@@ -34,14 +35,19 @@
         .tag-wasm, .tag-wasm-tag-list {
             display: inline;
         }
-        .tag-wasm-tag-list {
-            gap: 6px;
-        }
         .tag-wasm-tag-list > * {
             margin-bottom: 2px;
         }
-        span.tag-name {
-            vertical-align: middle;
+        .tag-wasm-tag-cloud {
+            user-select: none;
+            max-height: 15rem;
+            overflow: auto;
+            padding: .8rem .6rem;
+        }
+        .tag-wasm-tag-cloud > * {
+            cursor: pointer;
+            user-select: none;
+            filter: opacity(60%);
         }
         span.tag-remove {
             vertical-align: middle;
@@ -51,6 +57,17 @@
         }
         p.help-text.after {
             margin-bottom: 0;
+        }
+        input.tag-wasm-input:focus {
+            outline: none;
+        }
+        .tag-wasm:focus-within {
+            outline: 1px solid Highlight;
+        }
+        @media (hover: none) and (pointer: coarse) {
+            .tag-wasm-help-text, .tag-wasm-msg, .tag-wasm-tag-cloud, .tag-wasm {
+                display: none;
+            }
         }
     </style>
     {{parents|json_script:"parents_json" }}
