--- a/sic/templates/account/account.html
+++ b/sic/templates/account/account.html
@@ -50,6 +50,7 @@
             <li><a href="{% url 'edit_settings' %}">Edit Settings</a></li>
             <li><a href="{% url 'edit_filters' %}">Edit Filters</a></li>
             <li><a href="{% url 'edit_profile' %}">Edit Profile</a></li>
+            <li><a href="{% url 'edit_avatar' %}">Edit Avatar</a></li>
             <li><a href="{{ user.get_absolute_url }}">View Profile</a></li>
             <li><a href="{% url 'bookmarks' %}">Bookmarks</a></li>
             <li><a href="{% url 'notifications' %}">Notification History</a></li>
